crates/macro-tools/tests/ui/accessors/fail/skip_with_visibility.stderr
error: `skip` cannot be combined with other accessor options
 --> tests/ui/accessors/fail/skip_with_visibility.rs:5:5
  |
5 |     #[accessor(skip, vis(pub(crate)))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
